Changes for Perl Application Development and Refactoring Environment

0.55 To Be Released
    - Add full list of file types to the View Document As menu (SZABGAB)
    - dist-zilla projects detection finally fixed (#489) (JQUELIN)
    - Saving files to somewhere other than the current project will now
      correctly flush the document project state, and triggers a directory
      tree flush so that we communicate the change in project (ADAMK)

0.54 2010.01.07
    - Added experimental support for clickable filenames in Output panel.
      Currently only matches: <error> at <file> line 5. (PDONELAN)
    - If all files are closed, the function list would ->Hide itself
      permanently and never come back. Resolved (ADAMK)
    - Fix perl interpreter selection (SZABGAB)
    - Updated DBD::SQLite dependency to 1.27 and ORLite dependency to 1.30.
      This should now correctly throw an exception on a corrupt padre.db file
      which will cause an immediate crash at startup with a SQLite-related
      error message instead of a secondary error message complaining about
      missing Padre::DB classes (ADAMK)
    - Moved Padre::HelpProvider::Perl to Padre::Document::Perl::Help to
      prevent plugin classes from being scattered all over the namespace
      tree (ADAMK)
    - Moved Padre::QuickFixProvider::Perl to Padre::Document::Perl::QuickFix
      to prevent plugin classes from being scattered all over the namespace
      tree (ADAMK)
    - During shutdown, be more precise about the order in which we clean up
      and be more careful to ensure that ->Update is NOT disabled, to prevent
      segfaults on Windows from the "disabled update at exit" bug (ADAMK)
    - Added the first PROJECT-backend config_perltidy setting, so that
      projects can for the first time define a project tidy policy. This
      project-specific policy isn't being used by the plugin itself yet,
      but this change clears the way for that kind of functionality (ADAMK)